@@ -77,12 +77,7 @@ public class TestDataNodeVolumeFailureToleration {
 
   @After
   public void tearDown() throws Exception {
-    if (cluster != null) {
-      for (File dir : cluster.getAllInstanceStorageDirs()) {
-        dir.setExecutable(true);
-      }
-      cluster.shutdown();
-    }
+    cluster.shutdown();
   }
 
   /**
@@ -152,7 +147,7 @@ public class TestDataNodeVolumeFailureToleration {
 
     // Fail a volume on the 2nd DN
     File dn2Vol1 = cluster.getInstanceStorageDir(1, 0);
-    assertTrue("Couldn't chmod local vol", dn2Vol1.setExecutable(false));
+    DataNodeTestUtils.injectDataDirFailure(dn2Vol1);
 
     // Should only get two replicas (the first DN and the 3rd)
     Path file1 = new Path("/test1");
@@ -166,7 +161,7 @@ public class TestDataNodeVolumeFailureToleration {
 
     // If we restore the volume we should still only be able to get
     // two replicas since the DN is still considered dead.
-    assertTrue("Couldn't chmod local vol", dn2Vol1.setExecutable(true));
+    DataNodeTestUtils.restoreDataDirFromFailure(dn2Vol1);
     Path file2 = new Path("/test2");
     DFSTestUtil.createFile(fs, file2, 1024, (short) 3, 1L);
     DFSTestUtil.waitReplication(fs, file2, (short) 2);
